<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dtoolbar"/>

    <TextView
        android:layout_below="@id/dtoolbar"
        android:id="@+id/dDetailsPageTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dDetailsPageTextView1"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/dDetailsPageTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dDetailsPageTextView1"
        android:text="@string/dDetailsPageTextView2"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/dDetailsPageTextView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dDetailsPageTextView2"
        android:text="@string/dDetailsPageTextView3"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/dDetailsPageImageView"
        android:layout_below="@id/dDetailsPageTextView3"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"
        android:layout_width="300dp"
        android:layout_height="300dp" />

    <Button
        android:id="@+id/dDetailsPageButtonFav"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/dDetailsPageButtonFav"/>

    <Button
        android:id="@+id/dDetailsPageButtonBack"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="Go Back"/>

</RelativeLayout>