<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_purple" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/LayoutDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">
        <!-- THIS IS WHAT IS VISIBLE ON SCREEN:-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/sMainPageEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:hint="@string/sMainPageHint"
                android:textSize="20dp" />

            <Button
                android:id="@+id/sMainPageSearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@id/sMainPageEditText"
                android:text="@string/sMainPageSearchButtonText" />

            <Button
                android:id="@+id/sMainPageFavButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sMainPageEditText"
                android:text="@string/sMainPageFavButtonText" />

            <ListView
                android:id="@+id/sMainPageListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/sMainPageFavButton" />

            <ProgressBar
                android:id="@+id/sMainPageProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sMainPageFavButton"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:visibility="visible" />

        </RelativeLayout>
        <!-- THIS IS WHAT IS WHAT POPS OUT FROM THE SIDE:-->
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/Navigation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/activity_header_layout"
            app:menu="@menu/navigation_menu" />
    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>
